pitscout/src/components/main-page/MainPage.scss
.main-page {
	display: flex;
	flex-direction: row;
	column-gap: 16px;
	max-height: calc(100vh - var(--header-height));
	overflow-y: clip;

	.robot-list-wrapper {
		display: flex;
		flex-direction: column;
		align-items: center;
		box-sizing: border-box;
		border-right: 1px solid rgba(0, 0, 0, 0.12);
		width: 192px;
		height: 100vb;
		max-height: 100%;
		padding: 16px;
		overflow-y: auto;
	}

	.detail-section {
		display: flex;
		flex-direction: column;
		box-sizing: border-box;
		overflow-y: auto;
		max-height: 100%;
		width: fit-content;
		padding: 32px 16px 16px 0;

		.title-area {
			display: flex;
			align-items: center;
			margin-bottom: 12px;

			.title {
				font-weight: 600;
				font-size: 36px;
				line-height: 44px;
				margin: 0;
			}

			#add-image-button {
				margin-left: auto;
			}
		}
	}
}

